--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,13 @@
   	<dependency>
 		<groupId>jfree</groupId>
 		<artifactId>jfreechart</artifactId>
-		<version>1.0.1</version>
+		<version>1.0.13</version>
 	</dependency>
+   <dependency>
+        <groupId>jfreechart</groupId>
+        <artifactId>jfreechart</artifactId>
+        <version>1.0.0</version>
+      </dependency>
   </dependencies>
    <build>
   
