--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,32 @@
 		<artifactId>jfreechart</artifactId>
 		<version>1.0.13</version>
 	</dependency>
-   <dependency>
-        <groupId>jfreechart</groupId>
-        <artifactId>jfreechart</artifactId>
-        <version>1.0.0</version>
-      </dependency>
   </dependencies>
    <build>
-  
+ <plugins>
+        <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <configuration>
+                <archive>
+                    <manifest>
+                    <addClasspath>true</addClasspath>
+                        <mainClass>net.cammann.tom.fyp.core.SimulationContext</mainClass>
+                    </manifest>
+                </archive>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+            </configuration>
+            <executions>
+          <execution>
+            <id>make-my-jar-with-dependencies</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+        </plugin>
+    </plugins>
   </build>
 </project>
