Changed logging to use log4j, not tested. log4j properties probably not linked to correctly. Fix this in simcontext

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
 		<artifactId>jfreechart</artifactId>
 		<version>1.0.13</version>
 	</dependency>
+	<dependency>
+	<groupId>log4j</groupId>
+	<artifactId>log4j</artifactId>
+	<version>1.2.16</version>
+</dependency>
+            
   </dependencies>
    <build>
  <plugins>
