--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,28 @@
 		<version>1.0.13</version>
 	</dependency>
 	<dependency>
-	<groupId>log4j</groupId>
-	<artifactId>log4j</artifactId>
-	<version>1.2.16</version>
-</dependency>
-            
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>1.2.16</version>
+	</dependency>
+    <dependency>
+     <groupId>junit</groupId>
+     <artifactId>junit</artifactId>
+     <version>4.8</version>
+     <scope>test</scope>
+   </dependency>  
   </dependencies>
    <build>
  <plugins>
+ <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <version>2.3.1</version>
+  <configuration>
+    <source>1.6</source>
+    <target>1.6</target>
+  </configuration>
+</plugin>
         <plugin>
             <artifactId>maven-assembly-plugin</artifactId>
             <configuration>
