Using reflecting now in testing, got rid of simulation context calls

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 # Log levels
 # Uncomment the following line to enable full loggin for every class
-log4j.rootLogger=trace, stdout, R
-#log4j.logger.gr.xfrag=trace, stdout, R
+#log4j.rootLogger=trace, stdout, R
+log4j.logger.gr.xfrag=trace, stdout, R
 
 # Console appender configuration
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
