stable commit, removed reset of simcontext, fixed bugs, finished tests

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 # Log levels
 # Uncomment the following line to enable full loggin for every class
-#log4j.rootLogger=trace, stdout, R
-log4j.logger.gr.xfrag=trace, stdout, R
+log4j.rootLogger=info, stdout, R
+#log4j.logger.gr.xfrag=trace, stdout, R
 
 # Console appender configuration
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -15,7 +15,7 @@ log4j.appender.R=org.apache.log4j.RollingFileAppender
 log4j.appender.R.File=./logs/alifefyp.log
 log4j.appender.R.MaxFileSize=500KB
 # Keep one backup file
-log4j.appender.R.MaxBackupIndex=1
+log4j.appender.R.MaxBackupIndex=2
 # Rolling File Appender layout
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%d - %c - %p - %m%n
