--- a/pom.xml
+++ b/pom.xml
@@ -28,20 +28,60 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<reporting>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8.1</version>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.0-beta-2</version>
 				<configuration>
-					<stylesheetfile>${basedir}/src/main/javadoc/stylesheet.css</stylesheetfile>
+					<reportPlugins>
+						<plugin>
+							<groupId>org.codehaus.mojo</groupId>
+							<artifactId>cobertura-maven-plugin</artifactId>
+							<version>2.5.1</version>
+							<configuration>
+								<check>
+									<branchRate>85</branchRate>
+									<lineRate>85</lineRate>
+									<haltOnFailure>true</haltOnFailure>
+									<totalBranchRate>85</totalBranchRate>
+									<totalLineRate>85</totalLineRate>
+									<packageLineRate>85</packageLineRate>
+									<packageBranchRate>85</packageBranchRate>
+								</check>
+								</configuration>
+							</plugin>
+							<plugin>
+								<groupId>org.apache.maven.plugins</groupId>
+								<artifactId>maven-javadoc-plugin</artifactId>
+								<version>2.8.1</version>
+								<configuration>
+									<stylesheetfile>${basedir}/src/main/javadoc/stylesheet.css</stylesheetfile>
+									<!--		<doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
+								<docletArtifact>
+									<groupId>org.umlgraph</groupId>
+									<artifactId>doclet</artifactId>
+									<version>5.1</version>
+								</docletArtifact> -->
+							</configuration>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-checkstyle-plugin</artifactId>
+							<version>2.6</version>
+							<configuration>
+								<configLocation>${basedir}/src/main/checkstyle/tc-cs.xml</configLocation>
+							</configuration>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-report-plugin</artifactId>
+							<version>2.6</version>
+						</plugin>
+					</reportPlugins>
 				</configuration>
 			</plugin>
-		</plugins>
-	</reporting>
-	<build>
-		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
