--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,15 @@
 					<reportPlugins>
 						<plugin>
 							<groupId>org.codehaus.mojo</groupId>
+							<artifactId>findbugs-maven-plugin</artifactId>
+							<version>2.4.0</version>
+							<configuration>
+								<effort>Max</effort>
+								<threshold>Low</threshold>
+							</configuration>
+						</plugin>
+						<plugin>
+							<groupId>org.codehaus.mojo</groupId>
 							<artifactId>cobertura-maven-plugin</artifactId>
 							<version>2.5.1</version>
 							<configuration>
@@ -50,15 +59,15 @@
 									<packageLineRate>85</packageLineRate>
 									<packageBranchRate>85</packageBranchRate>
 								</check>
-								</configuration>
-							</plugin>
-							<plugin>
-								<groupId>org.apache.maven.plugins</groupId>
-								<artifactId>maven-javadoc-plugin</artifactId>
-								<version>2.8.1</version>
-								<configuration>
-									<stylesheetfile>${basedir}/src/main/javadoc/stylesheet.css</stylesheetfile>
-									<!--		<doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
+							</configuration>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-javadoc-plugin</artifactId>
+							<version>2.8.1</version>
+							<configuration>
+								<stylesheetfile>${basedir}/src/main/javadoc/stylesheet.css</stylesheetfile>
+								<!--		<doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
 								<docletArtifact>
 									<groupId>org.umlgraph</groupId>
 									<artifactId>doclet</artifactId>
