--- a/pom.xml
+++ b/pom.xml
@@ -36,66 +36,73 @@
 				<version>3.0-beta-2</version>
 				<configuration>
 					<reportPlugins>
-						<plugin>
-							<groupId>org.codehaus.mojo</groupId>
-							<artifactId>jdepend-maven-plugin</artifactId>
-						</plugin>
-						<plugin>
-							<groupId>org.codehaus.mojo</groupId>
-							<artifactId>javancss-maven-plugin</artifactId>
-							<version>2.0</version>
-						</plugin>
-						<plugin>
-							<groupId>org.codehaus.mojo</groupId>
-							<artifactId>jxr-maven-plugin</artifactId>
-							<configuration>
-								<javadocDir>${project.reporting.outputDirectory}/apidocs</javadocDir>
-
-							</configuration>
-						</plugin>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-pmd-plugin</artifactId>
-							<version>2.7.1</version>
-							<configuration>
-								<linkXref>true</linkXref>
-								<sourceEncoding>utf-8</sourceEncoding>
-								<minimumTokens>100</minimumTokens>
-								<targetJdk>1.6</targetJdk>
-							</configuration>
-						</plugin>
-						<plugin>
-							<groupId>org.codehaus.mojo</groupId>
-							<artifactId>findbugs-maven-plugin</artifactId>
-							<version>2.4.0</version>
-							<configuration>
-								<effort>Max</effort>
-								<threshold>Low</threshold>
-							</configuration>
-						</plugin>
-						<plugin>
-							<groupId>org.codehaus.mojo</groupId>
-							<artifactId>cobertura-maven-plugin</artifactId>
-							<version>2.5.1</version>
-							<configuration>
-								<check>
-									<branchRate>85</branchRate>
-									<lineRate>85</lineRate>
-									<haltOnFailure>true</haltOnFailure>
-									<totalBranchRate>85</totalBranchRate>
-									<totalLineRate>85</totalLineRate>
-									<packageLineRate>85</packageLineRate>
-									<packageBranchRate>85</packageBranchRate>
-								</check>
-							</configuration>
-						</plugin>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-javadoc-plugin</artifactId>
-							<version>2.8.1</version>
-							<configuration>
-								<stylesheetfile>${basedir}/src/main/javadoc/stylesheet.css</stylesheetfile>
-								<!--		<doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>taglist-maven-plugin</artifactId>
+						<version>2.4</version>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>jdepend-maven-plugin</artifactId>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>javancss-maven-plugin</artifactId>
+						<version>2.0</version>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>jxr-maven-plugin</artifactId>
+						<configuration>
+							<linkJavadoc>true</linkJavadoc>
+							<javadocDir>${basedir}/target/site/apidocs</javadocDir>
+							<!-- fix this path -->
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-pmd-plugin</artifactId>
+						<version>2.7.1</version>
+						<configuration>
+							<linkXref>true</linkXref>
+							<sourceEncoding>utf-8</sourceEncoding>
+							<minimumTokens>100</minimumTokens>
+							<targetJdk>1.6</targetJdk>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>findbugs-maven-plugin</artifactId>
+						<version>2.4.0</version>
+						<configuration>
+							<effort>Max</effort>
+							<linkXref>true</linkXref>
+							<threshold>Low</threshold>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>cobertura-maven-plugin</artifactId>
+						<version>2.5.1</version>
+						<configuration>
+							<check>
+								<branchRate>85</branchRate>
+								<lineRate>85</lineRate>
+								<haltOnFailure>true</haltOnFailure>
+								<totalBranchRate>85</totalBranchRate>
+								<totalLineRate>85</totalLineRate>
+								<packageLineRate>85</packageLineRate>
+								<packageBranchRate>85</packageBranchRate>
+							</check>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>2.8.1</version>
+						<configuration>
+					<!--<stylesheetfile>${basedir}/src/main/javadoc/stylesheet.css</stylesheetfile>-->
+							<!--		<doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
 								<docletArtifact>
 									<groupId>org.umlgraph</groupId>
 									<artifactId>doclet</artifactId>
@@ -124,7 +131,7 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.8.1</version>
 				<configuration>
-					<stylesheetfile>${basedir}/src/main/javadoc/stylesheet.css</stylesheetfile>
+					<!--<stylesheetfile>${basedir}/src/main/javadoc/stylesheet.css</stylesheetfile>-->
 				</configuration>
 			</plugin>
 			<plugin>
