--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,7 @@
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
-							<mainClass>net.cammann.tom.fyp.gp.GeneticProgramFrame</mainClass>
+							<mainClass>net.cammann.tom.fyp.core.SimulationLauncher</mainClass>
 						</manifest>
 					</archive>
 					<descriptorRefs>
